vlib/v/checker/tests/for_in_range_string_type.out
vlib/v/checker/tests/for_in_range_string_type.v:2:11: error: range type can not be string
    1 | fn main() {
    2 |     for i in 'a'..'b' {
      |              ~~~
    3 |         println(i)
    4 |     }
