vlib/v/checker/tests/for_in_range_string_type.vv
fn main() {
	for i in 'a' .. 'b' {
		println(i)
	}
}
